--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,89 +1,269 @@
 body{
 	margin: 0;
 	position: relative;
+  background-color: #E5EBF0;
 }
-/*Header*/
+/*Header-------------------------------------------------------------------------------------------------*/
 
 header{
 	width: 100%;
-	height: 3em;
+	height: 2.85em;
 	background-color: #FFF;
 	position: fixed;
   z-index: 10;
+  border-bottom: 1px solid #ACB0B4;
 }
 .inicio{
   display: inline-block;
   color: #67737F;
-  font-size: 15px;
-  height: 100%;
+  height: 25px;
   width: 70px;
   margin-left: 45px;
 }
 .notificaciones{
   display: inline-block;
-  height: 100%;
+  color: #67737F;
+  height: 25px;
   width: 120px;
   text-align: center;
 }
 .mensajes{
   display: inline-block;
-  height: 100%;
-  width: 70px;
+  color: #67737F;
+  height: 25px;
+  width: 120px;
   text-align: center;
 }
 .icono{
-  color: #4287F6;
-  font-size: 25px;
+  color: #1da1f2;
+  font-size: 23px;
   height: 100%;
   width: 400px;
   padding: 10px;
   display: inline-block;
   text-align: center;
+  position: absolute;
+  left: 425px;
+}
+.a-bird{
+  color: #1da1f2;
+}
+.a-bird:hover{
+  color: #1da1f2;
 }
 .buscar{
   display: inline-block;
   height: 100%;
   width: 70px;
   text-align: center;
+  margin-left: 630px;
+  margin-top: 7px;
+}
+.search-icon{
+  position: absolute;
+  right: 20px;
+  font-size: 18px;
+  top: 6px;
+}
+form{
+  width: 221px;
+  height: 33px;
+  position: relative;
+  text-align: left;
+  color: #7A8696;
+  background-color: #F5F8FA;
+  border-radius: 21px;
+  border: 1px solid #E6ECF0;
+  font-size: 14px;
+  padding: 8px 32px 8px 12px;
+  box-sizing: border-box;
+}
+.nameHeader{
+  padding-left: 5px;
+}
+.divHeader:hover{
+  cursor: pointer;
+  color: #FF0000;
+  border-bottom: 2.5px solid #FF0000;
 }
 
-/*Section 1 : left*/
+/*Section 1 : left-------------------------------------------------------------------------------------*/
 #left{
-	width: 25%;
+	width: 290px;
 	left: 0;
-	height: 350px;
-	background-color: red;
-  display: inline-block;
-  margin-top: 3em;
+	height: 602px;
+	display: inline-block;
+  margin-top: 3.5em;
+  margin-left: 40px;
 }
-/*Section 2: right*/
+.profile{
+  width: 290px;
+  height: 213px;
+  background-color: #FFF;
+}
+.large-photo{
+  width: 290px;
+  height: 95px;
+  overflow: hidden;
+  position: relative; 
+}
+.larPhoto{
+  width: 288px;
+  position:absolute;
+  left: -100%;
+  right: -100%;
+  top: -125%;
+  bottom: -100%;
+  margin: auto;
+  min-height: 100%;
+  min-width: 100%;
+}
+.name{
+  width: 290px;
+  height: 118px;
+  position: relative;
+}
+.round-photo{
+  width: 72px;
+  height: 77px;
+  overflow: hidden;
+  position: absolute;
+  border: 3px solid #FFF;
+  border-radius: 50%;
+  top: 115px;
+  left: 50px;
+}
+.rouPhoto{
+  width: 72px;
+  position:absolute;
+  left: -100%;
+  right: -100%;
+  top: -50%;
+  bottom: -100%;
+  margin: auto;
+  min-height: 100%;
+  min-width: 100%;
+}
+.user{
+  position: absolute;
+  font-size: 19px;
+  display: inline-block;
+  margin: 0px;
+  margin-left: 95px;
+  top: 6px;
+}
+.twName{
+  position: absolute;
+  margin: 0;
+  font-size: 14px;
+  left: 93px;
+  color: #667486;
+  top: 32px;
+  font-weight: lighter;
+}
+.followBox{
+  display: inline-block;
+  position: absolute;
+  bottom: 3px;
+}
+ul{
+  list-style: none;
+  margin: 0;
+  margin-left: 25px;
+  margin-bottom: 11px;
+  padding: 0;
+  overflow: auto;
+}
+li{
+  width: 80px;
+  text-align: left;
+  float: left;
+}
+a{
+  display: block;
+  text-decoration: none;
+  color: #657786;
+  height: 39px;
+}
+a:hover{
+  color: #FF0000;
+}
+.follow{
+  font-size: 14px;
+  width: 74px;
+  height: 16px;
+  margin: 0;
+}
+.followNumber{
+  font-size: 18px;
+  color: #FF0000;
+  width: 74px;
+  height: 16px;
+  margin: 0;
+  padding-top: 2px;
+}
+.trends{
+  width: 290px;
+  height: 370px;
+  position: relative;
+  margin-top: 10px;
+  background-color: #FFF;
+  padding: 15px;
+  box-sizing: border-box;
+}
+.trends-title{
+  color: #14171A;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0;
+}
+.trends-list{
+  margin-left: 0;
+  margin-top: 15px;
+}
+.trend-item{
+  width: 258px;
+  height: 17px;
+  margin-bottom: 15px;
+  color: #FF0000;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.trend-item:hover{
+  text-decoration: underline;
+}
+/*Section 2: right------------------------------------------------------------------------------------*/
 #right{
 	width: 25%;
   right: 0;
   top: 3em;
   height: 350px;
-  background-color: green;
+  /*background-color: green;*/
   position: absolute;
   display: inline-block;
 }
-/*Section 3: middle*/
+/*Section 3: middle-----------------------------------------------------------------------------------*/
 #text-section{
-	width: 50%;
-	top: 3em;
-  background-color: white;
+	width: 590px;
+	top: 3.5em;
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: #FFE3E3;
   position: absolute;
   display: inline-flex;
   padding-top: 15px;
+  padding-bottom: 50px;
 }
 textarea{  
   overflow:hidden;
-  padding:10px;
-  width:250px;
-  font-size:14px;
-  margin:50px auto;
-  display:block;
-  border-radius:10px;
-  border:6px solid #556677;
+  padding: 8px;
+  width: 467px;
+  height: 64px;
+  font-size: 14px;
+  display: block;
+  border-radius: 10px;
+  border: 6px solid #556677;
 }
 #tweet-area{
 	display: block;
@@ -92,40 +272,76 @@ textarea{
   padding-left: 1em;
 }
 .txt{
-	width: 500px;
-	padding: 15px;
-	border: 1px solid #4287F6;
+	width: 490px;
+  padding: 8px;
+  border: 2px solid #FF8F90;
   border-radius: 10px;
   outline: none;
   resize: none;
-
+  margin-left: 52px;
+  margin-top: -2px;
 }
-#button{
+.avatar{
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
+  position: absolute;
+  border-radius: 50%;
+  top: 15px;
+  left: 28px;
+}
+.avatar-photo{
+  width: 32px;
+  position:absolute;
+  left: -100%;
+  right: -100%;
+  top: -50%;
+  bottom: -100%;
+  margin: auto;
+  min-height: 100%;
+  min-width: 100%;
+}
+#btn{
 	width: 80px;
   height: 30px;
-  background-color: #F5F7FA;
-  color: #4287F6;
-  font-size: 13px;
-  border-radius: 6px;
-  border: 1px solid #4287F6;
+  background-color: #FF3232;
+  color: #FFF;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 100px;
+  padding: 6px 16px;
+  border: 1px solid transparent;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+#btn:disabled{
+  color: #FFEBEB;
+  background-color: #FF9E9E;
 }
 #counter{
-	border: 1px solid red;
 	width: 15px;
-	height: 15px;
+  font-size: 18px;
+  height: 15px;
+  color: #6F7B86;
+  position: absolute;
+  right: 120px;
+  bottom: 20px;
 }
 .cont {
-	margin-left: 1em;
-	text-align: left;
-	position: absolute;
-    top: 130px;
+	width: 590px;
+  top: 9.5em;
+  margin-right: 10px;
+  position: absolute;
+  display: inline-block;
 }
 
-.cont div {
-	padding: 1em 0.5em;
-	margin-bottom: 2em;
-	outline: 0.1em solid #4287F6;
-	border-radius: 6px; 
-	background-color: #fff;
-	display: block;
+.comment-div{
+	padding: 15px;
+  background-color: #FFF;
+  border-bottom: 1px solid #CBD4DD;
+  border-top: 1px solid #CBD4DD;
+}
+.paragraph{
+  margin: 0;
 }
